# biophony-ai

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONFIG_CROSS_PLATFORM.md  DATABASE_DEVELOPER_GUIDE.md  INDIVIDUAL_INDEX_CONFIGS.md  MIGRATION_COMPLETED.md  README.md  SCHEMA_MIGRATIONS.md  SPECTRAL_ANALYSIS_GUIDE.md  WEBAPP_SETUP.md  aci_processor.py  acoustic_heatmaps.py  audio_database.py  calculate_global_minmax.py  config-test.yaml  config.yaml  config_aai_maad.yaml  config_aci_only.yaml  config_acoustic_complexity_index.yaml  config_acoustic_diversity_index.yaml  config_acoustic_eveness_index.yaml  config_acoustic_gradient_index.yaml  config_bioacoustics_index.yaml  config_eastern_froglet.yaml  config_frequency_entropy.yaml  config_generalized_indices.yaml  config_ggbf.yaml  config_maad_spectral_activity.yaml  config_maad_temporal_activity.yaml  config_macquarie.yaml  config_medium.yaml  config_multi_species_frogs.yaml  config_number_of_peaks.yaml  config_soundscape_index.yaml  config_spectral_activity.yaml  config_spectral_cover.yaml  config_spectral_entropy.yaml  config_spectral_events.yaml  (+34 more)
.claude/agents/: bioacoustic-data-analyst.md  bioacoustic-researcher.md  bioacoustic-validator.md
docs/: AudioMoth_Developer_Reference.md  DATABASE_MIGRATION_SUMMARY.md  NEW_FEATURES.md  PIO_Sprint1.md  PIPELINE_TUTORIAL.md  PROJECT_BRIEF.md  SESSION_NOTES.md  WEBAPP_SETUP.md  WEBAPP_V2_API_GUIDE.md  code_critique.md  pio_feature.md  web_app_spec.md
indices/: __init__.py  base_index.py  database_manager.py  spectral_processor.py  temporal_processor.py
templates/: index.html
webapp/v1/: web_app.py
webapp/v1/static/: styles.css
webapp/v1/templates/: index.html
webapp/v2/: README.md  requirements.txt
webapp/v2/backend/: app.py  config.py  database.py
webapp/v2/backend/api/: __init__.py  audio.py  files.py  indices.py  poi.py  spectrograms.py
webapp/v2/backend/models/: __init__.py  audio_file.py
webapp/v2/backend/services/: __init__.py  colormap_service.py  file_service.py  poi_strips_service.py  spectrogram_service.py
webapp/v2/static/css/: main.css
webapp/v2/static/js/: debug.js  main.js
webapp/v2/static/js/components/: AudioPlayer.js  Controls.js  DatePicker.js  Navigation.js  POIStrips.js  RGBPicker.js  RGBStrip.js  SpectrogramViewer.js  Timeline.js
webapp/v2/static/js/services/: ApiService.js  StateManager.js
webapp/v2/templates/: index.html  poi.html
